# QtPDFxTMDPlotter

./: .gitignore  .gitmodules  CMakeLists.txt  CPDFDialog.qml  CPDFObject.qml  ColorPickerButton.qml  DownloadManager.cpp  DownloadManager.h  DragDropModel.cpp  DragDropModel.h  FileWriter.cpp  FileWriter.h  FilterComboBox.qml  GenericPDFContainer.cpp  GenericPDFContainer.h  GlobalContext.qml  LineStyleSelector.qml  Main.qml  PDFDataProvider.cpp  PDFDataProvider.h  PDFDialog.qml  PDFInfo.cpp  PDFInfo.h  PDFInfoModel.cpp  PDFInfoModel.h  PDFObject.qml  PDFObjectItem.qml  PDFSetProvider.cpp  PDFSetProvider.h  PlotArea.qml  PlotExporter.cpp  PlotExporter.h  PlotModel.cpp  PlotModel.h  README.md  SettingDialog.qml  TMDDialog.qml  TMDObject.qml  TopSection.qml  Utils.cpp  (+5 more)
GeneralComponents/: LinkedLabel.qml  ScrollableComboBox.qml
Settings/Views/: AboutView.qml  PDFInfoView.qml  qmldir
Settings/dialogs/: SettingDialog.qml  qmldir
Settings/wizard/: DownloadProcessPage.qml  PathSelectionPage.qml  RepositorySelectionPage.qml  qmldir
lib3/PDFxTMDLib-0.2.0-win64/include/PDFxTMDLib/Common/: ConfigWrapper.h  ICommand.h  YamlInfoReader.h
lib3/PDFxTMDLib-0.2.0-win64/include/PDFxTMDLib/MissingPDFSetHandler/: ArchiveExtractorCommand.h  PDFSetDownloadHandler.h  RepoSelectionCommand.h
lib3/PDFxTMDLib-0.2.0-win64/lib/cmake/PDFxTMDLib/: PDFxTMDLibConfig.cmake  PDFxTMDLibTargets-relwithdebinfo.cmake  PDFxTMDLibTargets.cmake
